	- fixed post data array problem (stefan, Monte)

Version 1.01
-----------
	- fixed problem with PHP 4.3.2 and fread() (Monte)

Version 1.0
-----------
	- added textarea to stripform functionality (Monte)
    - fixed multiple cookie setting problem (Monte)
    - fixed problem where extra text inside <frame src (Monte)
    - fixed problem where extra text inside <a href (Monte)
    - removed http request header from curl fetched
      documents, not needed (Monte)
    - added carriage return to newlines on headers (Monte)
    - fixed bug with curl, removed single quotes
	- fixed bug with curl and "&" in the URL
	- added ability to post files. (Andrei)

Version 0.94
------------
    - Added fetchform() function
    - Fixed misc issues with frames
    - Added SSL support via cURL
    - fixed bug with posting arrays of data
    - added status variable for http status

Version 0.93
------------
    - fixed bug with hostname match in a redirect location header
    - added $lastredirectaddr variable

Version 0.92
------------
    - fixed redirect bug with MS web server
    - added ability to pass set cookies through redirects
    - added ability to traverse html frames

Version 0.91
------------
    - fixed bug with return headers being overwritten.
      Please read the NEWS file for important notes. (Monte)

Version 0.9
-----------
    - added support for read timeouts (Andrei)
    - standardized distribution (Andrei)

Version 0.1e
------------
    - fixed bug in fetchlinks logic (Monte)

Version 0.1d
------------
    - fixed redirect bug without fully qualified url (Monte)

Version 0.1c
------------
    - fixed bug on submitting formvars after a redirect (Monte)

Version 0.1b
------------
    - fixed bug to allow empty post vars on a submit (Monte)

Version 0.1
------------
    - initial release (Monte)