@@ -1,3 +1,4 @@
+    - added proxy user/pass support (Robert Zwink, Monte)
 	- fixed post data array problem (stefan, Monte)
 
 Version 1.01
